tests/suite/fail/generated/types/fail_lt_string_bool.ny
fn main() {
    let _ = "a" < true //~ ERROR type mismatch in `comparison` operation
}
